Fixed 'settings' translation and spacing in German

--- a/static/css/cookies.css
+++ b/static/css/cookies.css
@@ -206,7 +206,7 @@
   .cookiebar .cookies-settings
   {
     padding: 1.5em 1em;
-    margin: 0 1em;
+    margin: 0 0.5em;
   }
 
   .cookiebar .cookies-settings:hover,
@@ -241,7 +241,7 @@
   .cookiebar .cookies-submit
   {
     padding: 0.5em 1.5em;
-    margin: 1em;
+    margin: 1em 0.5em;
   }
 }
 
